--- a/ChaiTeaPlugin/ChaiTeaPlugin.csproj
+++ b/ChaiTeaPlugin/ChaiTeaPlugin.csproj
@@ -3,10 +3,11 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <Nullable>enable</Nullable>
-    <BaseOutputPath>C:\Users\au564064\Desktop\ChaiTea\build\</BaseOutputPath>
+    <BaseOutputPath>$(SolutionDir)\build\</BaseOutputPath>
     <BaseIntermediateOutputPath>$(Configuration)\</BaseIntermediateOutputPath>
     <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <IsPublishable>False</IsPublishable>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
